# cpu6502

./: .gitignore  .gitmodules  6502.drawio  BASIC_README.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_REVIEW_REPORT.md  INSTRUCTION_REFACTORING_REPORT.md  LICENSE  Makefile  PHASES_2_3_4_PLAN.md  PHASE_2_TIMING_VALIDATION_REPORT.md  PHASE_3_MEMORY_AUDIT_REPORT.md  PROGRESS_REPORT.md  PR_TEMPLATE_v2.0.md  README.md  RELEASE_CHECKLIST_v2.0.md  RELEASE_NOTES_v2.0.md  SECURITY.md  WOZMON_README.md  compose.yaml  cpu.cpp  cpu.hpp  cpu6502  cpu_log.txt  main_6502  main_6502.cpp  mem.hpp  test.cpp  test_basic.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  force-ci.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: cpp-specialist.md  document-specialist.md  expert-cpp-software-engineer.agent.md  organizer-agent.md  testing-specialist.md
.github/workflows/: ci.yml  codeql.yml
_codeql_build_dir/: CTestTestfile.cmake  Makefile
_codeql_build_dir/googletest/: CTestTestfile.cmake  Makefile
_codeql_build_dir/googletest/googlemock/: CTestTestfile.cmake  Makefile
_codeql_build_dir/googletest/googletest/: CTestTestfile.cmake  Makefile
_codeql_build_dir/src/: CTestTestfile.cmake  Makefile
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile
docs/: Doxyfile  GUI_IMPLEMENTATION_SUMMARY.md  architecture.md  audio_device.md  debugger.md  emulator_gui.md  emulator_gui_es.md  file_device.md  github-search-query.md  instructions.md  interrupt_system.md  peripheral_devices.md  scripting_api.md  serial_device.md  timer_device.md  video_device.md  wozmon_integration.md
examples/: README_FILE_DEVICE.md  README_TEXT_SCREEN.md  apple_io_demo.cpp  audio_demo.cpp  basic_trace_demo.cpp  file_device_demo.cpp  gui_demo.cpp  interrupt_demo.cpp  musical_scale.asm  screenshot_demo.cpp  tcp_serial_demo.cpp  text_screen_demo.cpp  wozmon_demo.cpp  wozmon_serial_demo.cpp
inc/: peripheral_device.hpp  scripting_api.hpp
include/: audio_device.hpp  basic_audio.hpp  basic_timer.hpp  c64_io.hpp  cpu.hpp  cpu_addressing.hpp  cpu_instructions.hpp  debugger.hpp  emulator_gui.hpp  file_device.hpp  instruction_set.hpp  interrupt_controller.hpp  io_device.hpp  logger.hpp  mem.hpp  peripheral_device.hpp  serial_device.hpp  storage_device.hpp  system_map.hpp  tcp_serial.hpp  text_screen.hpp  timer_device.hpp  video_device.hpp
include/cpu/: cpu.hpp  cpu_addressing.hpp  cpu_instructions.hpp
include/debugger/: debugger.hpp
include/devices/: acia_device.hpp  apple_io.hpp  audio_device.hpp  basic_audio.hpp  basic_timer.hpp  file_device.hpp  peripheral_device.hpp  pia.hpp  serial_device.hpp  storage_device.hpp  tcp_serial.hpp  text_screen.hpp  timer_device.hpp  via_port_device.hpp  video_device.hpp
include/gui/: emulator_gui.hpp
include/scripting/: scripting_api.hpp
include/util/: logger.hpp
src/: CMakeLists.txt  scripting_api.cpp
src/cpu/: addressing.cpp  cpu.cpp  cpu.cpp.bak  instructions.cpp  system_map.cpp
src/debugger/: debugger.cpp
src/devices/: acia_device.cpp  apple_io.cpp  apple_io.hpp  basic_audio.cpp  basic_timer.cpp  c64_io.cpp  file_device.cpp  joystick_device.cpp  joystick_device.hpp  pia.cpp  tcp_serial.cpp  text_screen.cpp  via_device.cpp  via_device.hpp  via_port_device.cpp
src/gui/: emulator_gui.cpp
src/interrupt/: interrupt_controller.cpp
src/main/: cpu_demo.cpp  main.cpp
src/mem/: mem.cpp
src/scripting/: scripting_api.cpp
src/util/: logger.cpp
src/wozmon/: rom.bin.resetbak  rom.bin.restorebak  wozmon.asm
tests/: CMakeLists.txt  instruction_handlers_test.cpp  instruction_set_coverage_test.cpp  memory_map_test.cpp  test_apple_io.cpp  test_audio_device.cpp  test_debugger.cpp  test_emulator_gui.cpp  test_file_device.cpp  test_interrupt_controller.cpp  test_main.cpp  test_peripheral_device.cpp  test_scripting_api.cpp  test_tcp_serial.cpp  test_text_screen.cpp  test_timer_device.cpp  timing_validation_test.cpp
tools/: inject_wozmon.py  patch_rom.py
